--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/davidcazalis/lunt-buttons/issues"
   },
-  "homepage": "https://github.com/davidcazalis/lunt-buttons#readme"
+  "homepage": "https://github.com/davidcazalis/lunt-buttons#readme",
+  "dependencies": {
+    "lunt-modular-scale": "0.0.2",
+    "lunt-settings": "0.0.1"
+  }
 }
